chore: Update cursor style in globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,9 +17,7 @@ body {
   background-position:
     0 0,
     22px 22px; */
-  cursor:
-    url('/cursor.png') 16 16,
-    auto !important;
+  cursor: url('/cursor.png'), auto !important;
 }
 
 body::before {
